static/css/techreport/techreport.css
/* ... */
:is(header, footer) .container {
  width: 85rem;
  max-width: 98vw;
  padding: 0;
}

:is(header, footer) .container > div {
  padding: 0;
}

/* Report navigation */
.report-navigation {
  color: var(--color-text);
  background-color: var(--color-card-background);
  border-top: 1px solid var(--color-page-background);
  border-bottom: 1px solid var(--color-page-background);
}

.report-navigation-content {
  display: flex;
  justify-content: space-between;
  align-items: end;
}

.report-navigation ul li {
  text-transform: none;
}

.report-navigation ul li a {
  padding: 0.75rem 0.25rem;
}

.report-navigation ul li a[aria-current="page"] {
  border-bottom: 3px solid var(--color-text);
}

.report-navigation ul li:hover {
  background-color: transparent;
}

.report-navigation ul li a:hover {
  color: var(--color-text);
  background-color: transparent;
  text-decoration: none;
}

.report-navigation ul li a:not([aria-current="page"]):hover {
  border-bottom: 3px solid var(--color-teal-faded);
}

/* Page Filters */
#page-filters {
  padding: 1.5rem;
}

#page-filters button:not(.remove-tech) {
  background-color: var(--color-teal-darker);
  border-radius: 3px;
  color: var(--color-blue-100);
  font-weight: 600;
  border: none;
  padding: 0.25rem 0.5rem;
}

.remove-tech {
  background: none;
  border: none;
  border-radius: 10rem;
  width: 44px;
  height: 44px;
  position: relative;
  top: -0.15rem;
}

.remove-tech:is(:hover, :focus) img {
  background: #fcc9c4;
  border-radius: 3rem;
}

.remove-tech img {
  width: 100%;
  max-width: 1.75rem;
}

#page-filters button[type="submit"] {
  font-size: 1.25rem;
  padding: 0.5rem;
  width: 100%;
  margin-top: 1rem;
}

#page-filters legend {
  font-size: 1rem;
  border: none;
  color: var(--color-text-lighter);
  margin-bottom: 0.5rem;
  font-weight: 600;
}

/* Page filters: Geo and rank */
#page-filters .lens {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
  margin: 0;
  gap: 0.5rem 0.5rem;
  margin-bottom: 0.5rem;
  margin-right: 0;
  margin-top: 2rem;
}

#page-filters .lens label,
#page-filters .lens select {
  color: var(--color-text-lighter);
  font-size: 0.8rem;
  width: 100%;
}

#page-filters .lens select {
  border-color: var(--color-text-lighter);
}

.select-label {
  border: 1px solid #959494;
  padding: 0;
  line-height: 100%;
  position: relative;
  border-radius: 5px;
}

#page-filters .select-label label {
  margin-bottom: 0;
  padding: 0;
  position: absolute;
  top: 0.5rem;
  left: 0.75rem;
  font-size: 0.825rem;
  z-index: 0;
  color: #767474;
}

#page-filters .select-label select {
  appearance: none;
  background-color: transparent;
  z-index: 1;
  position: relative;
  border: none;
  margin-bottom: 0;
  padding: 1.75rem 0.5rem 0.5rem 0.75rem;
  font-size: 1rem;
  line-height: 100%;
  color: var(--color-text-darker);
  border-radius: 3px;
  outline-offset: 2px;
}

.select-label::before {
  content: "";
  display: block;
  width: 2.5rem;
  height: 100%;
  position: absolute;
  right: 0;
  border-radius: 0 4px 4px 0;
}

.select-label::after {
  content: "";
  display: block;
  width: 0.5rem;
  height: 0.5rem;
  position: absolute;
  right: 1rem;
  top: 50%;
  top: calc(50% - 0.25rem);
  border-bottom: 1.5px solid var(--color-text-darker);
  border-left: 1.5px solid var(--color-text-darker);
  border-radius: 1px;
  transform: rotate(-45deg);
}

.select-label:has(select:is(:focus-visible, :hover))::before {
  background-color: var(--color-text-darker);
  border-left: 1px solid var(--color-text-darker);
}

.select-label:has(select:is(:focus-visible, :hover))::after {
  border-color: var(--color-page-background);
}

.select-label:has(select:focus-visible) {
  background-color: var(--color-page-background);
}

.select-label:has(select:focus-visible) label {
  color: var(--color-text) !important;
}

.technology-filters label.tech {
  font-size: 1.15rem;
  font-weight: normal;
  margin-bottom: 0.5rem;
  width: 100%;
}

.technology-filters select.tech {
  font-size: 1.25rem;
  width: 100%;
  margin-bottom: 0;
  border: 1px solid #959494;
  color: var(--color-text-lighter);
  appearance: none;
  background-color: transparent;
  padding: 0.5rem 0.5rem 0.5rem 0.75rem;
}

.technology-filters .tech-selector-group {
  border-bottom: 1px solid #eee;
  padding-bottom: 2rem;
  padding-top: 1.5rem;
}

.technology-filters .tech-selector-group:first-of-type {
  margin-top: -1.5rem;
}

.tech-selector-group:has(.remove-tech:is(:focus, :hover)) {
  background-color: var(--color-page-background);
}

.tech-selector-group {
  display: flex;
  column-gap: 1rem;
  align-items: end;
}

.tech-input-wrapper {
  position: relative;
}

.tech-input-wrapper::before {
  content: "";
  display: block;
  width: 2.5rem;
  height: 100%;
  position: absolute;
  right: 0;
  border-radius: 0 4px 4px 0;
  z-index: 2;
}

.tech-input-wrapper::after {
  content: "";
  display: block;
  width: 0.5rem;
  height: 0.5rem;
  position: absolute;
  right: 1rem;
  top: 50%;
  top: calc(50% - 0.25rem);
  border-bottom: 1.5px solid var(--color-text-darker);
  border-left: 1.5px solid var(--color-text-darker);
  border-radius: 1px;
  transform: rotate(-45deg);
  z-index: 3;
}

.tech-input-wrapper select {
  z-index: 1;
  position: relative;
}

.tech-input-wrapper:has(select:is(:focus-visible, :hover))::before {
  background-color: var(--color-text-darker);
  border-left: 1px solid var(--color-text-darker);
}

.tech-input-wrapper:has(select:is(:focus-visible, :hover))::after {
  border-color: var(--color-page-background);
}

.tech-input-wrapper:has(select:focus-visible) {
  background-color: var(--color-page-background);
  color: var(--color-text);
}

.tech-input-wrapper:has(select:focus-visible) select {
  color: var(--color-text);
}

[data-theme="dark"] select option,
[data-theme="dark"] .tech-input-wrapper:has(select:focus-visible) select {
  color: var(--color-page-background) !important;
  background-color: var(--color-text-darker) !important;
}
/* ... */

